# syslog-ng-old

./: .gitignore  .gitmodules  autogen.sh  configure.ac  configure.in
debian/: copyright  rules
debian/control.d/: control.in
lib/: Makefile.am  aflua-dest.c  aflua-dest.h  aflua-source.c  aflua-source.h  cfg-grammar.y  cfg-parser.c  cfg-tree.c  cfg.c  cfg.h  driver.c  driver.h  globals.c  logmsg-serialize.c  logmsg-serialize.h  logproto-indented-multiline-server.c  logproto-text-server.c  logproto-text-server.h  logproto.c  logreader.c  logreader.h  logthrdestdrv.c  logthrdestdrv.h  logtransport.c  lua-filter.c  lua-filter.h  lua-msg.c  lua-msg.h  lua-option-parser.c  lua-option-parser.h  lua-options.c  lua-options.h  lua-parser.c  lua-parser.h  luaconfig.c  luaconfig.h  mainloop.c  msg-format.c  nvcontainer.c  nvcontainer.h  (+23 more)
lib/template/: templates.c
lib/tests/: Makefile.am  test_runid.c  test_stringutils.c
libtest/: Makefile.am  assert-pipe.c  assert-pipe.h
modules/: Makefile.am
modules/afamqp/: afamqp.c
modules/affile/: Makefile.am  affile-lua.c  affile-lua.h  affile-plugin.c  affile-source.c
modules/afmongodb/: afmongodb-grammar.ym  afmongodb-parser.c  afmongodb.c  afmongodb.h
modules/afprog/: Makefile.am  afprog-lua.c  afprog-lua.h  afprog-plugin.c
modules/afsmtp/: afsmtp.c
modules/afsocket/: Makefile.am  afinet-source.c  afsocket-lua.c  afsocket-lua.h  afsocket-plugin.c  afsocket.c
modules/afsql/: afsql.c
modules/afstomp/: afstomp-grammar.ym  afstomp.c  afstomp.h  stomp.c
modules/dbparser/: Makefile.am  dbparser-lua.c  dbparser-lua.h  dbparser-plugin.c
modules/json/: format-json.c
modules/linux-kmsg-format/: linux-kmsg-format-plugin.c  linux-kmsg-format.c  linux-kmsg-format.h
modules/redis/: Makefile.am  redisdd-grammar.ym  redisdd-parser.c  redisdd-parser.h  redisdd.c  redisdd.h
modules/rss/: Makefile.am  rss-grammar.ym  rss-parser.c  rss-parser.h  rss.c  rss.h
modules/system-source/: system-source.c
modules/xmpp/: Makefile.am  xmpp-grammar.ym  xmpp-lib.c  xmpp-lib.h  xmpp-parser.c  xmpp-parser.h  xmpp.c  xmpp.h
scl/: Makefile.am  syslog-ng-conf.lua
syslog-ng/: main.c
tests/functional/: control.py  func_test.py  func_test_case.py  log.py  messagegen.py  test_file_source.py  test_filters.py  test_input_drivers.py  test_lua_config.py  test_lua_input_drivers.py  test_performance.py  test_rss.py  test_sql.py
tests/unit/: Makefile.am  test_logproto.c  (+6 more)
(+2 files in other folders)
